test/tests/compiler/12_unsigned_integers/valid/unsigned_expressions/simple.plx
#  A simple arithmetic test case 

pub fn main(none) i32 {
    u: u32 = 2147483647u
    return (u + 2u == 2147483649u)
}
