test/tests/compiler/12_unsigned_integers/invalid_lex/plx1_invalid_suffix_7.plx
pub fn main(none) i32 {
    return 42lu
}
